--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <Script languaje='javascript'>
    var getin = prompt("FAVOR COLOCAR SU CODIGO ID PREMIUM PARA SEGUIR DISFRUTANDO.                                                                           En caso de no tener codigo debes comprarlo por solo 3 dolares tocando cancelar o donde esta el carrito amarillo.")
-  if (getin!="25050")
+  if (getin!="0608")
   {location.href='GO:PAYPAL'}
   else
   {alert('ESTA PROHIBIDO COMPARTIR SU CODIGO ID CON OTRA PERSONA, EVITE LA SUSPENCION DEL MISMO. TOCA ACEPTAR')}
@@ -15,7 +15,7 @@
 
 <br>
 <br>
-<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=GO:NICK3"> 
+<META HTTP-EQUIV="REFRESH" CONTENT="0;URL=GO:http://srregio.net/e20/tv.m3u"> 
 </head>
 <body class='loading'>
 <div class='navbar section' id='navbar'><div class='widget Navbar' data-version='1' id='Navbar1'><script type="text/javascript">
